src/objects/NQT_Equipment_List__c.object
<CustomObject>
    <fields>
        <fullName>Engineering_Notes__c</fullName>
        <description>Notes</description>
        <inlineHelpText>Enter Engineering Notes</inlineHelpText>
        <label>Engineering Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_CPR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPR</label>
        <referenceTo>CPR__c</referenceTo>
        <relationshipName>Equipment_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Enter Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Extended_Price__c</fullName>
        <formula>NQT_Unit_Price__c  *  Quantity__c</formula>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NQT_In_Group__c</fullName>
        <label>In Group</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_In_Kit__c</fullName>
        <description>Enter the Kit in which the part is.</description>
        <inlineHelpText>Enter the Kit to which Part Number Belongs.</inlineHelpText>
        <label>In Kit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Kit_Part_Number__c</fullName>
        <description>To identify whether it is a Kit or Part Number.</description>
        <inlineHelpText>To identify whether it is a Kit or Part Number.</inlineHelpText>
        <label>Kit/Part Number</label>
        <picklist>
            <picklistValues>
                <fullName>Kit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Kit_Part_Number_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>Kit/Part Number</label>
        <referenceTo>NQT_Product__c</referenceTo>
        <relationshipName>Equipment_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NQT_Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Unit_Price__c</fullName>
        <formula>VALUE(SUBSTITUTE(NQT_Kit_Part_Number_lookup__r.NQT_Standard_Price__c,&apos;,&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Used to enter the quantity of the kit/part number.</description>
        <inlineHelpText>Enter a Value</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NQT Equipment List</label>
    <nameField>
        <label>Equipment List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Create New Equipment Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>